--- a/game-server/Cargo.toml
+++ b/game-server/Cargo.toml
@@ -11,6 +11,6 @@ reqwest = { version = "0.12.5", features = ["json"] }
 rust_socketio = "0.6.0"
 serde = { version = "1.0.207", features = ["derive"] }
 serde_json = "1.0.124"
-tokio = "1.39.2"
+tokio = { version = "1.38.1", features = ["rt", "macros", "rt-multi-thread"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
