--- a/schnapsen-rs/Cargo.toml
+++ b/schnapsen-rs/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.207", features = ["derive"] }
 serde_json = "1.0.124"
+num_enum = "0.7.3"
+rand = "0.8.5"
