--- a/schnapsen-duo-server/Cargo.toml
+++ b/schnapsen-duo-server/Cargo.toml
@@ -17,3 +17,4 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 schnapsen-rs = { path = "../schnapsen-rs" }
 num_enum = "0.7.3"
+thiserror = "1.0.63"
