--- a/schnapsen-rs/Cargo.toml
+++ b/schnapsen-rs/Cargo.toml
@@ -12,3 +12,4 @@ num_enum = "0.7.3"
 rand = "0.8.5"
 tokio = { version = "1.38.1", features = ["rt", "macros", "rt-multi-thread"] }
 futures = "0.3.30"
+chrono = "0.4.38"
