--- a/schnapsen-duo-server/Cargo.toml
+++ b/schnapsen-duo-server/Cargo.toml
@@ -20,3 +20,5 @@ num_enum = "0.7.3"
 thiserror = "1.0.63"
 sha2 = "0.10.8"
 futures = "0.3.30"
+tower = "0.5.0"
+tower-http = { version = "0.5.2", features = ["trace"]}
