--- a/schnapsen-rs/Cargo.toml
+++ b/schnapsen-rs/Cargo.toml
@@ -1,5 +1,7 @@
 [package]
 name = "schnapsen-rs"
+description = "Schnapsen implementation in Rust"
+license = "MIT"
 version = "0.1.0"
 edition = "2021"
 
