--- a/schnapsen-duo-server/Cargo.toml
+++ b/schnapsen-duo-server/Cargo.toml
@@ -21,4 +21,4 @@ thiserror = "1.0.63"
 sha2 = "0.10.8"
 futures = "0.3.30"
 tower = "0.5.0"
-tower-http = { version = "0.5.2", features = ["trace"]}
+tower-http = { version = "0.6.1", features = ["cors", "trace"] }
