--- a/game-server/Cargo.toml
+++ b/game-server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-recursion = "1.1.1"
 axum = "0.7.5"
 reqwest = { version = "0.12.5", features = ["json"] }
 rust_socketio = "0.6.0"
