--- a/schnapsen-duo-server/Cargo.toml
+++ b/schnapsen-duo-server/Cargo.toml
@@ -22,3 +22,7 @@ sha2 = "0.10.8"
 futures = "0.3.30"
 tower = "0.5.0"
 tower-http = { version = "0.6.1", features = ["cors", "trace"] }
+
+
+[patch.crates-io]
+schnapsen-rs = { path = "../schnapsen-rs" }
