--- a/schnapsen-duo-server/Cargo.toml
+++ b/schnapsen-duo-server/Cargo.toml
@@ -15,10 +15,13 @@ socketioxide = "0.14.1"
 tokio = { version = "1.38.1", features = ["rt", "macros", "rt-multi-thread"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
-schnapsen-rs = "0.1.30"
+schnapsen-rs = "0.1.45"
 num_enum = "0.7.3"
 thiserror = "1.0.63"
 sha2 = "0.10.8"
 futures = "0.3.30"
 tower = "0.5.0"
 tower-http = { version = "0.6.1", features = ["cors", "trace"] }
+lapin = "2.5.0"
+futures-lite = "2.5.0"
+uuid = { version = "1.11.0", features = ["v4"] }
