Rewrote to async | Added dev Dockerfiles

--- a/schnapsen-duo-server/Dockerfile
+++ b/schnapsen-duo-server/Dockerfile
@@ -1,6 +1,10 @@
 FROM rust:latest
 
 WORKDIR /usr/schnapsen-duo-server
+COPY Cargo.toml Cargo.lock ./
+
+RUN cargo build --release
+
 COPY . .
 
 RUN cargo build --release
