removed cargo lock file from docker copy

--- a/schnapsen-duo-server/Dockerfile
+++ b/schnapsen-duo-server/Dockerfile
@@ -1,7 +1,7 @@
 FROM rust:latest
 
 WORKDIR /usr/schnapsen-duo-server
-COPY Cargo.toml Cargo.lock ./
+COPY Cargo.toml ./
 
 RUN cargo build --release
 
