--- a/schnapsen-duo-server/Dockerfile
+++ b/schnapsen-duo-server/Dockerfile
@@ -2,7 +2,7 @@ FROM rust:latest
 
 WORKDIR /usr/schnapsen-duo-server
 COPY Cargo.toml ./
-COPY main.rs ./
+COPY src/main.rs ./src/
 
 RUN cargo build --release
 
