--- a/schnapsen-duo-server/Dockerfile
+++ b/schnapsen-duo-server/Dockerfile
@@ -1,11 +1,16 @@
 FROM rust:latest
 
+WORKDIR /usr/
+
+RUN USER=root cargo new --bin schnapsen-duo-server 
 WORKDIR /usr/schnapsen-duo-server
+
 COPY Cargo.toml ./
-COPY src/main.rs ./src/
 
 RUN cargo build --release
+RUN rm src/*.rs
 
-COPY . .
+COPY ./src ./src
 
-RUN cargo build --release
+RUN rm ./target/release/deps/schnapsen_duo_server*
+RUN cargo install --path .
