--- a/schnapsen-ai-client/package.json
+++ b/schnapsen-ai-client/package.json
@@ -12,6 +12,6 @@
     "@types/amqplib": "^0.10.6",
     "amqplib": "^0.10.5",
     "gn-matchmaker-client": "0.1.30",
-    "gn-schnapsen-client": "^0.1.30"
+    "gn-schnapsen-client": "0.1.31"
   }
 }
