--- a/schnapsen-duo-server/Dockerfile
+++ b/schnapsen-duo-server/Dockerfile
@@ -2,6 +2,8 @@ FROM rust:latest
 
 WORKDIR /usr/
 
+ARG AMQP_URL
+
 RUN USER=root cargo new --bin schnapsen-duo-server 
 WORKDIR /usr/schnapsen-duo-server
 
