--- a/schnapsen-duo-server/Cargo.toml
+++ b/schnapsen-duo-server/Cargo.toml
@@ -15,7 +15,7 @@ socketioxide = "0.14.1"
 tokio = { version = "1.38.1", features = ["rt", "macros", "rt-multi-thread"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
-schnapsen-rs = "0.1.63"
+schnapsen-rs = "0.1.67"
 num_enum = "0.7.3"
 thiserror = "1.0.63"
 sha2 = "0.10.8"
@@ -24,7 +24,7 @@ tower = "0.5.0"
 tower-http = { version = "0.6.1", features = ["cors", "trace"] }
 futures-lite = "2.5.0"
 uuid = { version = "1.11.0", features = ["v4"] }
-chrono = "0.4.38"
+chrono = { version = "0.4.38", features = ["serde"] }
 gn-communicator = "0.1.5"
 lazy_static = "1.5.0"
 async_once = "0.2.6"
