--- a/schnapsen-duo-server/Cargo.toml
+++ b/schnapsen-duo-server/Cargo.toml
@@ -28,3 +28,4 @@ chrono = { version = "0.4.38", features = ["serde"] }
 gn-communicator = "0.1.10"
 lazy_static = "1.5.0"
 async_once = "0.2.6"
+async-std = "1.13.0"
