Added env to Dockerfile

--- a/schnapsen-duo-server/Dockerfile
+++ b/schnapsen-duo-server/Dockerfile
@@ -3,6 +3,7 @@ FROM rust:latest
 WORKDIR /usr/
 
 ARG AMQP_URL
+ARG NEXT_ROUND_DELAY
 
 RUN USER=root cargo new --bin schnapsen-duo-server 
 WORKDIR /usr/schnapsen-duo-server
