--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
       context: ./schnapsen-duo-server
       args:
         - AMQP_URL=${AMQP_URL}
+        - NEXT_ROUND_DELAY=${NEXT_ROUND_DELAY}
     container_name: schnapsen-duo-server
     command: schnapsen-duo-server
     ports:
